# Session_Tracker_Timer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  Session_Tracker_Timer.py  SetupDialog.cpp  SetupDialog.h  TimerState.h  TimerWindow.cpp  TimerWindow.h  app.manifest  main.cpp  resource.h  resources.rc
.github/workflows/: build-macos.yml
macos/: build_app.sh
macos/Sources/WolfTimerMac/: AppController.swift  CoverWindowController.swift  Geometry.swift  Models.swift  SetupWindowController.swift  TimerWindowController.swift  main.swift
src/: CMakeLists.txt  CoverSquareWindow.cpp  CoverSquareWindow.h  SetupDialog.cpp  SetupDialog.h  TimerWindow.cpp  TimerWindow.h  app.manifest  main.cpp  no_auto_manifest.props  resource.h  resources.rc
